# frigg

./: .gitignore  .ignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  prek.toml
crates/cli/: Cargo.toml  THIRD_PARTY_NOTICES.md  build.rs
crates/cli/benches/: content_cache.rs  graph_hot_paths.rs  hybrid_search.rs  lexical_backend_compare.rs  manifest_build.rs  native_lexical_search.rs  precise_graph.rs  reindex.rs  reindex_latency.rs  search_latency.rs  search_symbol.rs  semantic_chunk_hot_paths.rs  storage_hot_paths.rs  symbol_corpus.rs  symbol_extraction.rs  tool_latency.rs
crates/cli/benches/common/: mod.rs
crates/cli/src/: cli_args.rs  cli_dispatch.rs  cli_runtime.rs  http_runtime.rs  language_support.rs  lib.rs  main.rs  manifest_validation.rs  path_class.rs  playbooks.rs  test_support.rs  text_sanitization.rs  vendor_grammars.rs  watch.rs  workspace_ignores.rs
crates/cli/src/cli_runtime/: config_resolution.rs  startup_gates.rs  storage_paths.rs
crates/cli/src/cli_runtime/commands/: mod.rs  playbooks.rs  reindex.rs  storage.rs  workload_corpus.rs
crates/cli/src/domain/: error.rs  evidence.rs  mod.rs  model.rs  provenance.rs  search.rs
crates/cli/src/embeddings/: google.rs  mod.rs  openai.rs  tests.rs  transport.rs
crates/cli/src/graph/: heuristic_graph.rs  mod.rs  precise_graph.rs  precise_store.rs  scip_support.rs  tests.rs
crates/cli/src/indexer/: manifest.rs  mod.rs  reindex.rs  semantic.rs  symbols.rs  tests.rs
crates/cli/src/indexer/reindex/: execution.rs  plan.rs  semantic.rs  store.rs
crates/cli/src/indexer/symbols/: extraction.rs  heuristics.rs  inspection.rs  model.rs  spans.rs
crates/cli/src/indexer/tests/: language.rs  manifest.rs  query.rs  semantic.rs  support.rs
crates/cli/src/languages/: blade.rs  go.rs  java.rs  kotlin.rs  lua.rs  mod.rs  nim.rs  php.rs  python.rs  registry.rs  roc.rs  rust.rs  typescript.rs
crates/cli/src/languages/php/: declarations.rs  evidence.rs  resolution.rs
crates/cli/src/mcp/: advanced.rs  deep_search.rs  explorer.rs  guidance.rs  mod.rs  provenance_cache.rs  server.rs  server_cache.rs  server_state.rs  tool_surface.rs  types.rs  workspace_registry.rs
crates/cli/src/mcp/deep_search/: runtime.rs  tests.rs
crates/cli/src/mcp/server/: content.rs  deep_search.rs  errors.rs  execution.rs  navigation_cache.rs  navigation_metadata.rs  navigation_precise.rs  navigation_resolution.rs  navigation_tools.rs  precise_graph.rs  presentation.rs  provenance.rs  runtime_cache.rs  runtime_gate_tests.rs  runtime_status.rs  search_tools.rs  symbol_index.rs  workspace.rs  workspace_session.rs
crates/cli/src/mcp/server/navigation_tools/: call_hierarchy.rs  location.rs  references.rs
crates/cli/src/mcp/server/precise_graph/: config.rs  generation.rs  ingest.rs
crates/cli/src/mcp/server/runtime_gate_tests/: cache_runtime.rs  error_mapping.rs  freshness.rs  navigation.rs  precise_generation.rs  status.rs  workspace.rs
crates/cli/src/mcp/server/runtime_status/: index_health.rs  (+2 more)
crates/cli/src/mcp/types/: deep_search.rs  navigation.rs  repository.rs  schema_tests.rs  search.rs  workspace.rs
crates/cli/src/playbooks/: loader.rs  model.rs  parser.rs  runner.rs  trace.rs  witness.rs
crates/cli/src/searcher/: attribution.rs  candidate_universe.rs  candidates.rs  content_scrub.rs  graph_channel.rs  hybrid_execution.rs  hybrid_match.rs  intent.rs  laravel.rs  lexical_channel.rs  lexical_recall.rs  mod.rs  ordering.rs  overlay_projection.rs  path_witness_projection.rs  path_witness_search.rs  projection_service.rs  query_terms.rs  ranker.rs  regex_support.rs  reranker.rs  retrieval_projection.rs  ripgrep_backend.rs  scan_engine.rs  semantic.rs  surfaces.rs  tests.rs  types.rs
crates/cli/src/searcher/graph_channel/: internal.rs
crates/cli/src/searcher/hybrid_execution/: fusion.rs  pipeline.rs
crates/cli/src/searcher/intent/: context.rs  rules.rs  tests.rs
crates/cli/src/searcher/overlay_projection/: internal.rs
crates/cli/src/searcher/policy/: dsl.rs  frontier.rs  kernel.rs  mod.rs  post_selection.rs  trace.rs
crates/cli/src/searcher/projection_service/: loaders.rs  query.rs
crates/cli/src/searcher/retrieval_projection/: ast.rs  builders.rs  bundle.rs  mod.rs  normalize.rs  scip.rs
crates/cli/src/searcher/surfaces/: artifacts.rs  runtime.rs  support.rs  tokens.rs
crates/cli/src/searcher/tests/: ecosystem_ranking.rs  entrypoint_ranking.rs  hard_pack_trace.rs  laravel_path_witness.rs  overlay_projection.rs  python_ranking.rs  rust_ranking.rs  semantic.rs  text_search.rs  tool_surface.rs
crates/cli/src/settings/: frigg_config.rs  lexical_runtime.rs  mod.rs  runtime_profile.rs  semantic_runtime.rs  watch.rs
crates/cli/src/storage/: db_runtime.rs  lifecycle.rs  manifest_store.rs  mod.rs  projection_store.rs  provenance_path.rs  provenance_store.rs  schema.rs  semantic_store.rs  semantic_store_read.rs  semantic_store_support.rs  tests.rs  types.rs  vector_store.rs
crates/cli/src/storage/projection_store/: bundle.rs  common.rs  entrypoint_surface.rs  path_anchor_sketch.rs  path_relation.rs  path_surface_term.rs  path_witness.rs  subtree_coverage.rs  test_subject.rs
crates/cli/src/storage/tests/: manifest.rs  provenance.rs  retention.rs  schema.rs  semantic.rs  support.rs  vector_store.rs
crates/cli/src/watch/: repository.rs  scheduler.rs  supervisor.rs  tests.rs
crates/cli/tests/: citation_payloads.rs  codebase_specific_search_rules.rs  deep_search_replay.rs  hybrid_playbook_suite.rs  kotlin_hybrid_regressions.rs  lua_hybrid_regressions.rs  php_hybrid_regressions.rs  playbook_hybrid_suite.rs  playbook_suite.rs  provenance.rs  security.rs  tool_handlers.rs  tool_surface_parity.rs
crates/cli/tests/fixtures/: citation_payload_trace.json
crates/cli/tests/php_hybrid_regressions/: bookstack.rs  core.rs  laravel.rs  transport_runtime.rs
crates/cli/tests/tool_handlers/: core.rs  document_symbols.rs  navigation.rs  references.rs  search_symbol.rs  structural.rs  workspace.rs
crates/cli/vendor-grammars/tree-sitter-roc/src/: node-types.json
crates/cli/vendor-sqlite-vec/: sqlite-vec.h
(+380 files in other folders)
