[workspace]
members = [
  "crates/cli",
]
exclude = [
  "vendor/*",
]
default-members = [
  "crates/cli",
]
resolver = "2"

[workspace.package]
authors = ["Frigg Contributors"]
categories = ["command-line-utilities", "development-tools"]
description = "Local-first MCP server for code understanding."
documentation = "https://docs.rs/frigg"
edition = "2024"
homepage = "https://github.com/bnomei/frigg"
keywords = ["mcp", "code-search", "code-navigation", "tree-sitter", "semantic-search"]
license = "MIT AND MPL-2.0"
readme = "README.md"
repository = "https://github.com/bnomei/frigg"
rust-version = "1.85"
version = "0.2.0"

[workspace.dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
blake3 = "1.8.3"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
gix = "0.80.0"
ignore = "0.4.25"
memchr = "2.7.6"
notify = "8.2.0"
petgraph = "0.8.3"
protobuf = "=3.7.2"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
rmcp = { version = "1.2.0", features = ["transport-io", "transport-streamable-http-server"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
schemars = { version = "1.2.1", features = ["chrono04"] }
scip = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = "1.15.1"
tantivy = "0.25.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs", "io-std", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tree-sitter = "0.26.6"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-lua = "0.5.0"
tree-sitter-python = "0.23.3"
tree-sitter-php = "0.24.2"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
url = "2.5.8"
uuid = { version = "1.21.0", features = ["serde", "v7"] }
walkdir = "2.5.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
panic = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
