[package]
name = "frigg"
build = "build.rs"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
ignore.workspace = true
memchr.workspace = true
notify.workspace = true
petgraph.workspace = true
protobuf.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
rmcp.workspace = true
rusqlite.workspace = true
schemars.workspace = true
scip.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
tantivy.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tree-sitter.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-language = "0.1"
tree-sitter-lua.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true

[build-dependencies]
cc = "1.1"

[dev-dependencies]
criterion = "0.5.1"
rusqlite.workspace = true

[[bench]]
name = "manifest_build"
harness = false

[[bench]]
name = "symbol_extraction"
harness = false

[[bench]]
name = "native_lexical_search"
harness = false

[[bench]]
name = "symbol_corpus"
harness = false

[[bench]]
name = "hybrid_search"
harness = false

[[bench]]
name = "search_symbol"
harness = false

[[bench]]
name = "content_cache"
harness = false

[[bench]]
name = "precise_graph"
harness = false

[[bench]]
name = "reindex"
harness = false

[[bench]]
name = "lexical_backend_compare"
harness = false

[[test]]
name = "citation_payloads"
path = "tests/citation_payloads.rs"

[[test]]
name = "php_hybrid_regressions"
path = "tests/php_hybrid_regressions.rs"

[[test]]
name = "provenance"
path = "tests/provenance.rs"

[[test]]
name = "security"
path = "tests/security.rs"

[[test]]
name = "tool_handlers"
path = "tests/tool_handlers.rs"
